Replace deprecated methods in tests